spillway: set where the data will come from and be sent to
comes from modbus and sent to websocket river.

Signed-off-by: Mingkai Hu <mingkai.hu@nxp.com>

--- a/configuration/machine/com.ge.dspmicro.hoover.spillway-0.config
+++ b/configuration/machine/com.ge.dspmicro.hoover.spillway-0.config
@@ -62,6 +62,7 @@ com.ge.dspmicro.hoover.spillway.dataSubscriptions=[ \
   "Pressure_Subscription", \
   "OPCUA_Subscription_1", \
   "OPCUA_Subscription_2", \
+  "ModBusSubscription", \
   ]
   
 # [Optional] An array of data subscriptions where the data will come from  
@@ -71,7 +72,7 @@ com.ge.dspmicro.hoover.spillway.dataSubscriptions=[ \
 
 # [Required] Destination Data River name to where the data will be sent.
 # Change to the Data River by replacing the value with: Sender Service
-com.ge.dspmicro.hoover.spillway.destination="Http Sender Service"
+com.ge.dspmicro.hoover.spillway.destination="WS Sender Service"
 
 # [Optional] Type name of data processing logic defined in Processor.
 com.ge.dspmicro.hoover.spillway.processType=""
