identify: set token and client id
token URL which is got from "cf env mod-bus-rmd-ref-app-ui":
com.ge.dspmicro.predixcloud.identity.uaa.token.url="https://7c4b7997-

These are predix cloud identity info. When creating UAA, get these info:
com.ge.dspmicro.predixcloud.identity.uaa.clientid="app_client_id"
com.ge.dspmicro.predixcloud.identity.uaa.clientsecret="secret"

Signed-off-by: Mingkai Hu <mingkai.hu@nxp.com>

--- a/configuration/machine/com.ge.dspmicro.predixcloud.identity.config
+++ b/configuration/machine/com.ge.dspmicro.predixcloud.identity.config
@@ -68,13 +68,13 @@ com.ge.dspmicro.predixcloud.identity.uaa.enroll.url=""
 #
 # [Required] Predix Cloud UAA token endpoint
 #
-com.ge.dspmicro.predixcloud.identity.uaa.token.url=""
+com.ge.dspmicro.predixcloud.identity.uaa.token.url="https://7c4b7997-c09a-4794-8630-e95ca1685bd9.predix-uaa.run.aws-usw02-pr.ice.predix.io/oauth/token"
 
 #
 # Predix Cloud UAA client credentials
 #
-com.ge.dspmicro.predixcloud.identity.uaa.clientid=""
-com.ge.dspmicro.predixcloud.identity.uaa.clientsecret=""
+com.ge.dspmicro.predixcloud.identity.uaa.clientid="app_client_id"
+com.ge.dspmicro.predixcloud.identity.uaa.clientsecret="secret"
 com.ge.dspmicro.predixcloud.identity.uaa.clientsecret.encrypted=""
 
 #
