opcua-cofig: add the opcus config file
also make sure OPCUA_Subscription_1 has been added in the file
hoover.spillway-0.config

https://docs.predix.io/en-US/content/service/edge_software_and_services/machine/machine-gateway-services

Signed-off-by: Mingkai Hu <mingkai.hu@nxp.com>

--- a/configuration/machine/com.ge.dspmicro.machineadapter.opcua-0.config
+++ b/configuration/machine/com.ge.dspmicro.machineadapter.opcua-0.config
@@ -49,7 +49,7 @@
 #
 # Adapter Config File
 # Set the configuration file to start this adapter: configuration/machine/com.ge.dspmicro.machineadapter.opcua-0.xml
-com.ge.dspmicro.machineadapter.opcua.configFile=""
+com.ge.dspmicro.machineadapter.opcua.configFile="configuration/machine/com.ge.dspmicro.machineadapter.opcua-0.xml"
 
 # Human readable name of the adapter
 com.ge.dspmicro.machineadapter.opcua.name="OPC-UA Machine Adapter"
